results/SVCOMP/4-shot/log-ExLazy-2024_03_18_16_34_05.txt
class Main {

  //@ requires x == null && y == 0 || x != null;
  //@ ensures x == null && y == 0 ==> System.out.println(1);
  //@ ensures x != null ==> System.out.println(2);
  //@ also
  //@ requires n1 == 0;
  //@ ensures test(null, 0);
  //@ also
  //@ requires n1 != 0;
  //@ ensures test(null, n2);
  public static void test(Main x, int y) {
    if (x == null && y == 0) {
      System.out.println(1);
    } else if (x != null) {
      System.out.println(2);
      assert false;
    }
  }

  //@ requires n1 == 0 || n1 != 0;
  //@ ensures n1 == 0 ==> test(null, 0);
  //@ ensures n1 != 0 ==> test(null, n2);
  public static void f(int n1, int n2) {
    if (n1 == 0) test(null, 0);
    else test(null, n2);
  }
}
/home/max/Documents/JMLGPT/tmp/ExLazy.java:4: error: incompatible types: void cannot be converted to boolean
  //@ ensures x == null && y == 0 ==> System.out.println(1);
                                                        ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:5: error: incompatible types: void cannot be converted to boolean
  //@ ensures x != null ==> System.out.println(2);
                                              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:7: error: cannot find symbol
  //@ requires n1 == 0;
               ^
  symbol:   variable n1
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExLazy.java:8: error: incompatible types: void cannot be converted to boolean
  //@ ensures test(null, 0);
                  ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:10: error: cannot find symbol
  //@ requires n1 != 0;
               ^
  symbol:   variable n1
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExLazy.java:11: error: cannot find symbol
  //@ ensures test(null, n2);
                         ^
  symbol:   variable n2
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExLazy.java:22: error: incompatible types: void cannot be converted to boolean
  //@ ensures n1 == 0 ==> test(null, 0);
                              ^
/home/max/Documents/JMLGPT/tmp/ExLazy.java:23: error: incompatible types: void cannot be converted to boolean
  //@ ensures n1 != 0 ==> test(null, n2);
                              ^
8 errors

